tests/netconvert/import/XML/errors/node_id_invalid/errors.netconvert
Error: Invalid node id 'broken id'.
Error: Edge's '3' to-node 'broken id' is not known.
Quitting (on error).
